hphp/hack/doc/hack-langspec/tests/Expressions/Relational_Operators/combined_comparison.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 38)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Expressions/Relational_Operators/combined_comparison.php on line 1